--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-ga": "^3.3.1",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4"
   },
