--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.2.11",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-ga": "^3.3.1",
     "react-icons": "^5.2.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
