--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
     "next": "14.2.3",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-ga": "^3.3.1",
